# touric-rest-api

./: .env.example  .gitignore  .prettierrc  README.md  composer.json  drizzle.config.ts  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  rav.yaml  requirements.txt  tsconfig.json
app/Http/Requests/: StoreTourRequest.php  UpdateTourRequest.php
app/Http/Resources/: TourCollection.php  TourResource.php
app/Http/Services/: TourService.php
app/Models/: StartDate.php  Tour.php
app/Providers/: HealthCheckProvider.php
bootstrap/: providers.php
data/: tours-simple.json
database/factories/: StartDateFactory.php  TourFactory.php
database/migrations/: 2025_02_10_035745_create_tours_table.php  2025_02_10_051326_create_start_dates_table.php
database/seeders/: DatabaseSeeder.php
drizzle/: 0000_lovely_sumo.sql  0001_tearful_epoch.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
routes/: api.php  api_v1.php  console.php
scripts/: seed.ts
src/: app.module.ts  main.ts
src/app-config/: app-config.module.ts  app-config.service.ts  env.schema.ts
src/db/: db.health.ts  db.module.ts
src/db/schemas/: helpers.ts  index.ts  tours.ts
src/health/: health.controller.ts  health.module.ts
src/tours/: tours.controller.ts  tours.module.ts  tours.service.ts
src/tours/dtos/: tour-create-dto.ts  tour-list-dto.ts  tour-update-dto.ts
src/tours/entities/: start-date-entity.ts  (+1 more)
touring/: manage.py
touring/api/: urls.py
touring/touring/: asgi.py  urls.py  wsgi.py
touring/tours/: admin.py  models.py  urls.py
(+10 files in other folders)
